I added the new line

--- a/floor2/style.css
+++ b/floor2/style.css
@@ -14,7 +14,7 @@ so the button sizes change when we resize the window */
     background-size: 100% 100%;
 
     background-repeat: no-repeat;
-    background-image: url(image/Example_floor_plan.png);
+    background-image: url(floor2.png);
 
 }
 
