new inserts in sql

--- a/Backend Example Code/templates/index.html
+++ b/Backend Example Code/templates/index.html
@@ -55,7 +55,7 @@
             // allows us to update a webpage without reloading it 
             $.ajax({
                 // url for API request which gets all data from database
-                url: 'http://localhost:5000/api/all',
+                url: '/api/all',
                 type: 'GET',
 
                 success: function(result) {
