added click effect to buttons

--- a/floor1/button-style.css
+++ b/floor1/button-style.css
@@ -32,6 +32,11 @@ so the button sizes change when we resize the window */
     border: 2px solid rgb(0, 0, 0);
 }
 
+.clicky:active { 
+    transform: scale(0.98); 
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24); 
+}
+
 .font{
     font-family: "Courier New", monospace;
     font-weight: 900;
